2.1 (2014-05-16)
================

- The 2.0 series started adding the package that invoked
  ``config.add_jinja2_renderer`` to the template search path. This is
  being removed in favor of explicit search paths and will hopefully not
  affect many people as it has only been available for a couple weeks. The
  only automatic search path left is the one added by the default ``.jinja2``
  renderer created when including ``pyramid_jinja2``. [mmerickel]

- Adjust the ``config.include('pyramid_jinja2')`` to add any packages from
  ``jinja2.directories`` **before** the default search path at the base of
  the app. Previously there was no way to override that search path.
  [mmerickel]

2.0.2 (2014-05-06)
==================

- The path of the child template is always considered when inheriting from
  a base template. Therefore when doing ``render('templates/foo.jinja2')``
  and ``foo.jinja2`` has an ``{% extends 'base.jinja2' %}``, the template
  will be searched for as ``'templates/base.jinja2'`` on the search path.
  Previously the path of the child template was ignored when doing the
  lookup for the base, causing some very subtle and unrecoverable lookup
  errors when the child template was found relative to the caller instead
  of being found on the search path. [mmerickel]

- This release restores the default search path behaviors from the 1.x series
  that were inadvertently removed in the 2.x. The project's root package is
  added to the search path by default. [mmerickel]

2.0.1 (2014-04-23)
==================

- #86: Fix a regression caused by the new support for extending a template
  relative to itself. Using ``{% extends 'some_asset:spec.jinja2' %}`` was
  no longer working and is now fixed. [mmerickel]


2.0 (2014-04-21)
================

- Claim Python 3.4 support
  [mmerickel]

- #75: Fix the missing piece of relative template loading by allowing a
  template to inherit from a template relative to itself, instead of